--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
     - g++-5
     - cmake
   artifacts:
-    s3_region: "ca-central-1"
+    s3_region: "us-east"
     paths:
     - output-${TRAVIS_BUILD_NUMBER}.zip
 
