--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - cmake ..
 
 after_success:
-    - zip output-${TRAVIS_BUILD_NUMBER} ./test
+    - zip -r output-${TRAVIS_BUILD_NUMBER} ./test
 
 branches:
   only:
